[gd_scene load_steps=7 format=3 uid="uid://dhit0w3r7capu"]

[ext_resource type="Script" path="res://Menus/PlayerConnectedMenus/pause_menu.gd" id="1_obsqm"]
[ext_resource type="FontFile" uid="uid://bg5hh6emi7q6" path="res://Assets/Minercraftory.ttf" id="1_vmolr"]

[sub_resource type="Theme" id="Theme_y25fd"]
default_font = ExtResource("1_vmolr")

[sub_resource type="Theme" id="Theme_h8j65"]
default_font_size = 70

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bhr1"]
bg_color = Color(0.321569, 0.321569, 0.321569, 0.698039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twicr"]
bg_color = Color(0.6, 0.6, 0.6, 0.498039)

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_y25fd")
script = ExtResource("1_obsqm")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="BoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2/Container"]
custom_minimum_size = Vector2(350, 110)
layout_mode = 2
size_flags_horizontal = 6
theme = SubResource("Theme_h8j65")
text = "Options
"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="VBoxContainer2/MarginContainer2"]
custom_minimum_size = Vector2(450, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6bhr1")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/MarginContainer2/MarginContainer"]
custom_minimum_size = Vector2(425, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="resume" type="Button" parent="VBoxContainer2/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_twicr")
text = "Resume
"

[node name="exit_to_main" type="Button" parent="VBoxContainer2/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_twicr")
text = "Main Menu"

[node name="quit" type="Button" parent="VBoxContainer2/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_twicr")
text = "Quit"

[connection signal="pressed" from="VBoxContainer2/MarginContainer2/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer2/MarginContainer/VBoxContainer/exit_to_main" to="." method="_on_exit_to_main_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer2/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
